// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarginlyPoolWrapper long gas cost snapshot 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 441141,
}
`;

exports[`MarginlyPoolWrapper owner MarginlyPoolWrapper deposit depositBase with wrap ETH to WETH 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 268716,
}
`;

exports[`MarginlyPoolWrapper owner MarginlyPoolWrapper deposit depositBase without wrap 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 270263,
}
`;

exports[`MarginlyPoolWrapper owner MarginlyPoolWrapper deposit depositQuote with wrap EHT to WETH 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 268746,
}
`;

exports[`MarginlyPoolWrapper owner MarginlyPoolWrapper deposit depositQuote without wrap 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 270293,
}
`;

exports[`MarginlyPoolWrapper short gas cost snapshot 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 438061,
}
`;
